// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText should apply active formatting for inline paste 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><strong>132</strong>3</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should apply formatting when selection is collapsed 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">Some <strong>bold</strong>.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should apply formatting with primary shortcut 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><strong>test</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should apply multiple formats when selection is collapsed 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><strong><em>1</em></strong>.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should handle Home and End keys 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">-<strong>12</strong>+</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should handle change in tag name gracefully 1`] = `
"<!-- wp:heading {"level":3} -->
<h3 class="wp-block-heading"></h3>
<!-- /wp:heading -->"
`;

exports[`RichText should keep internal selection after blur 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1<strong>2</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should make bold after split and merge 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1<strong>2</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should navigate arround emoji 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1🍓</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should navigate consecutive format boundaries 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><strong>1</strong><em>2</em></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should navigate consecutive format boundaries 2`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><strong>1</strong>-<em>2</em></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not format text after code backtick 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">A <code>backtick</code> and more.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not lose selection direction 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><strong>1</strong>2-3</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not split rich text on inline paste 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">123</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not split rich text on inline paste with formatting 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">a1<strong>2</strong>3b</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not undo backtick transform with backspace after selection change 1`] = `""`;

exports[`RichText should not undo backtick transform with backspace after typing 1`] = `""`;

exports[`RichText should only mutate text data on input 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1<strong>2</strong>34</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should paste list contents into paragraph 1`] = `
"<!-- wp:list -->
<ul><!-- wp:list-item -->
<li>1<!-- wp:list -->
<ul><!-- wp:list-item -->
<li>2</li>
<!-- /wp:list-item --></ul>
<!-- /wp:list --></li>
<!-- /wp:list-item --></ul>
<!-- /wp:list -->

<!-- wp:list -->
<ul><!-- wp:list-item -->
<li>1<!-- wp:list -->
<ul><!-- wp:list-item -->
<li>2</li>
<!-- /wp:list-item --></ul>
<!-- /wp:list --></li>
<!-- /wp:list-item --></ul>
<!-- /wp:list -->"
`;

exports[`RichText should paste paragraph contents into list 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1<br>2</p>
<!-- /wp:paragraph -->

<!-- wp:list -->
<ul><!-- wp:list-item -->
<li>1<br>2</li>
<!-- /wp:list-item --></ul>
<!-- /wp:list -->"
`;

exports[`RichText should preserve internal formatting 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-cyan-bluish-gray-color">1</mark></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should preserve internal formatting 2`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-cyan-bluish-gray-color">1</mark></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p class="wp-block-paragraph"><mark style="background-color:rgba(0, 0, 0, 0)" class="has-inline-color has-cyan-bluish-gray-color">1</mark></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should return focus when pressing formatting button 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">Some <strong>bold</strong>.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should run input rules after composition end 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph"><code>a</code></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should split rich text on paste 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">a</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p class="wp-block-paragraph">1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p class="wp-block-paragraph">2</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p class="wp-block-paragraph">b</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should transform backtick to code 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">A <code>backtick</code></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should transform backtick to code 2`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">A \`backtick\`</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should transform when typing backtick over selection 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">A <code>selection</code> test.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should transform when typing backtick over selection 2`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">A \`selection\` test.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should undo backtick transform with backspace 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">\`a\`</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should update internal selection after fresh focus 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1<strong>2</strong></p>
<!-- /wp:paragraph -->"
`;
